# ImageClassifierAnno

./: README.md  config.py  main.py  pyproject.toml
ui/: category_manager.py  image_viewer.py  main_window.py  styles.py
utils/: dataset_exporter.py  file_utils.py
